# web_file_downloader

./: .gitignore  LICENSE  README.md  config.json  downloader.py  pyproject.toml  requirements.txt  settings.toml  utils.py  web_dl_by_type.py  wfd.py
core/: __init__.py  custom_exceptions.py  downloader.py  logger.py  utils.py
utils/: __init__.py  config.py  download_info.py  file_downloader.py  webdriver_manager.py
