[tool.poetry]
name = "web_file_downloader"
version = "0.1.4"
description = "Download web hosted files by filetype/file extension."
authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "web_file_downloader"}]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.2.1"
aiohttp = "^3.9.1"
async-timeout = "^4.0.3"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.4.0"
lxml = "^5.0.0"
requests = "^2.31.0"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
